--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -255,6 +255,11 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody body-overflow">
             <div class="layui-card main-table">
+                <blockquote class="msg-tip">
+                    1)可以向客户发送打折促销短信、节日关怀短信等。短信常规发送时间为:早9点-晚22点,其他时间发送自动延迟次日9点发送<br/>
+                    2) 根据淘宝规定，禁止发送“好评返现”、“免单”、“全5分返现” 相关内容的短信。<br/>
+                    3) 禁止发送加QQ、加微信、刷单、招聘刷单人员、招聘兼职、招商、代理相关内容的短信。
+                </blockquote>
                 <div class="layui-card-header yty-card-header">
                     <!--<span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>-->
                     <span class="step step-number-active step-one">1</span><span class="step-active">第一步：筛选条件</span>
@@ -518,7 +523,7 @@
                                         <td class="yty_tdright border-bottom">
                                             <!--btn-primary-border layui-btn-primary-->
                                             <button type="button" lay-submit="" lay-filter="" class="layui-btn yty-btn layui-btn-normal pre-step layui-btn-sm btn-embossed">上一步</button>
-                                            <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal yty-btn btn-embossed">发送短信</button>
+                                            <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal yty-btn btn-embossed">保存</button>
                                         </td>
                                     </tr>
                                     </tbody>
