订单短信群发

--- a/application/admin/view/Activity/order_sms_send.html
+++ b/application/admin/view/Activity/order_sms_send.html
@@ -272,6 +272,10 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody body-overflow">
             <div class="layui-card main-table">
+                <blockquote class="msg-tip">
+                    <span class="float-right close-icon-right cancle" title="关闭"><i class="fa fa-times" aria-hidden="true"></i></span>
+                    1）只显示最近3个月的订单。为了不影响买家休息，22点至早晨9点的短信都延迟到9点后发出。
+                </blockquote>
                 <!--<div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>订单查询</div>-->
                 <div class="layui-card-body layui-card-body-padding">
                     <!----------------------------------表格查询条件begin------------------------------->
