--- a/application/admin/view/Activity/order_sms_send_record.html
+++ b/application/admin/view/Activity/order_sms_send_record.html
@@ -27,7 +27,7 @@
 <!--</div>-->
 
 <!--头工具栏-->
-{:build_toolbar('toolbar',[ 'export'])}
+<!--{:build_toolbar('toolbar',[ 'export'])}-->
 <!--<script type="text/html" id="toolbar">-->
 <!--<div class="layui-btn-container">-->
 <!--<button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-1"></i>添加</button>-->
@@ -86,7 +86,7 @@
             ,url:"/sms_data.json" //对接请求后台数据
             ,id : 'tableReload'
             ,skin:'line'
-            ,toolbar : '#toolbar'
+//            ,toolbar : '#toolbar'
             ,data:{'Search':"{:__('Search')}",'Reset':"{:__('Reset')}"}
             ,loading:true
             ,limit:10
@@ -98,13 +98,9 @@
                 ,{field:'send_phone', title: "手机号码", excel_width:15, searchList:{type:'input',operate:'LIKE'}, minWidth: 120}
                 ,{field:'sms_title', title: "短信标题", excel_width:15, minWidth: 150}
                 ,{field:'sms_content', title:  "短信内容", excel_width:15, minWidth: 200}
-                ,{field:'sms_content', title:  "营销类型", excel_width:15, searchList:{type:'select',data:{"1":"会员营销","0":"再次营销"},'operate':'='}, minWidth: 100}
                 ,{field:'buyer_nickname', title:  "买家昵称", excel_width:15, searchList:{type:'input',operate:'LIKE'}, minWidth: 120}
-                ,{field:'send_status', title: "发送状态", excel_width:15,templet: '#switchStatus', sort: true, searchList:{type:'select',data:{"1":"成功","0":"失败"},'operate':'='}, minWidth: 120}
                 ,{field:'buyer_nickname', title:  "买家昵称", excel_width:15, minWidth: 150}
-                ,{field:'actual_deduction_count ', title: "实际扣费（条）", excel_width:15, minWidth: 150}
                 ,{field:'send_time', title: "发送时间", excel_width:15, searchList:{type:'input',event:'date',operate: 'RANGE'}, minWidth: 120}
-//                ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#actionbar', width:220}
             ]]
             ,page: {
                 layout: ['limit', 'count', 'prev', 'page', 'next', 'skip']
