--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2864,3 +2864,27 @@ input:focus, select:focus{
     padding: 15px;
     /*line-height: 22px;*/
 }
+
+.layui-side-menu .layui-nav .layui-nav-item .fa {
+    position: absolute;
+    top: 50%;
+    left: 23px;
+    margin-top: -7px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
