--- a/application/admin/view/auth/admin/edit.html
+++ b/application/admin/view/auth/admin/edit.html
@@ -3,7 +3,7 @@
 <body>
 <!--<div class="layui-container lay_top">-->
     <!--<div class="layui-row layui-col-space30">-->
-        <div class="body-form">
+        <!--<div class="body-form">-->
         <form class="layui-form" action="{:url('admin/auth.admin/edit','',false)}" tableid="tableReload" method="post" id="formRule" lay-filter="rule">
             <table class="layui-table" lay-skin="line" lay-size="sm">
                 <colgroup>
@@ -14,7 +14,17 @@
                 <tr>
                     <td class="tdleft">{:__('Group')}<span class="tips">*</span></td>
                     <td class="tdright">
+                        <!--<div class="layui-input-inline">-->
                         {:build_select('group', $groupdata, $groupids, ['class'=>'form-control selectpicker', 'multiple'=>'', 'lay-verify'=>'required', 'xm-select' => 'select'])}
+                        <!--</div>-->
+                    </td>
+                </tr>
+                <tr>
+                    <td class="tdleft">{:__('Mail delivery method')}<span class="tips">*</span></td>
+                    <td class="tdright">
+                        <div class="layui-input-inline">
+                            {:build_select('mail_smtp_send_type', $send_type_list, $email_config['mail_smtp_send_type'], ['data-rule'=>'required'])}
+                        </div>
                     </td>
                 </tr>
                 <tr>
@@ -63,7 +73,7 @@
                 </div>
             </div>
         </form>
-        </div>
+        <!--</div>-->
     <!--</div>-->
 <!--</div>-->
 {/block}
