--- a/application/admin/view/auth/rule/edit.html
+++ b/application/admin/view/auth/rule/edit.html
@@ -21,7 +21,9 @@
                 <tr>
                     <td class="tdleft">{:__('Parent')}</td>
                     <td class="tdright">
+                        <div class="layui-input-inline">
                         {:build_select('pid', $ruledata, $list['pid'], ['class'=>'form-control', 'required'=>''])}
+                        </div>
                     </td>
                 </tr>
                 <tr>
