--- a/application/admin/view/layout/default.html
+++ b/application/admin/view/layout/default.html
@@ -15,7 +15,7 @@
         </div>
         <!-- 辅助元素，一般用于移动设备下遮罩 -->
         <div class="layadmin-body-shade" layadmin-event="shade"></div>
-        {include file="common/footer" /}
+        <!--{include file="common/footer" /}-->
     </div>
 </div>
 <script src="__STATIC__/layui/layui.js"></script>
