--- a/application/admin/view/system/base_set.html
+++ b/application/admin/view/system/base_set.html
@@ -29,7 +29,9 @@
                                     <tr>
                                         <td class="tdleft">{:__('Mail delivery method')}<span class="tips">*</span></td>
                                         <td class="tdright">
+                                            <div class="layui-input-inline">
                                             {:build_select('mail_smtp_send_type', $send_type_list, $email_config['mail_smtp_send_type'], ['data-rule'=>'required'])}
+                                            </div>
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
@@ -64,7 +66,9 @@
                                     <tr>
                                         <td class="tdleft">{:__('SMTP Ways of identifying')}<span class="tips">*</span></td>
                                         <td class="tdright">
+                                            <div class="layui-input-inline">
                                             {:build_select('mail_smtp_check_type', $mail_type_list, $email_config['mail_smtp_check_type'], ['data-rule'=>'required'])}
+                                            </div>
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
@@ -75,16 +79,23 @@
                                         </td>
                                         <td class="tdright"></td>
                                     </tr>
+                                    <tr>
+                                        <td class="tdleft"></td>
+                                        <td class="tdright" colspan="2">
+                                        <button class="yty-btn layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
+                                        <button type="reset" class="layui-btn yty-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>
+                                        </td>
+                                    </tr>
                                     </tbody>
                                 </table>
-                                <div class="layui-form-item">
-                                    <div class="layui-input-block">
-                                        <div class="footer footer-common">
-                                            <button class="layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
-                                            <button type="reset" class="layui-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>
-                                        </div>
-                                    </div>
-                                </div>
+                                <!--<div class="layui-form-item">-->
+                                    <!--<div class="layui-input-block">-->
+                                        <!--<div class="footer footer-common">-->
+                                            <!--<button class="layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>-->
+                                            <!--<button type="reset" class="layui-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                             </form>
                         </div>
                         <div class="layui-tab-item layui-show" id="tab2">
