--- a/application/admin/view/system/security.html
+++ b/application/admin/view/system/security.html
@@ -29,6 +29,13 @@
                                             {:build_radios('strategy', ['1'=>__('Password strategy1'), '2'=>__('Password strategy2'), '3'=>__('Password strategy3')],$Password_strategy_type['passwd_complexity'])}
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td class="tdleft"></td>
+                                        <td class="tdright" colspan="2">
+                                            <button class="yty-btn layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
+                                            <button type="reset" class="layui-btn yty-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>
+                                        </td>
+                                    </tr>
                                     </tbody>
                                 </table>
                                 <!--<div class="layui-form-item">-->
@@ -45,12 +52,12 @@
                                         <!--</div>-->
                                     <!--</div>-->
                                 <!--</div>-->
-                                <div class="layui-form-item footer-form">
-                                    <div class="footer footer-common">
-                                        <button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed disabled">{:__('OK')}</button>
-                                        <button type="reset" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed">{:__('Reset')}</button>
-                                    </div>
-                                </div>
+                                <!--<div class="layui-form-item footer-form">-->
+                                    <!--<div class="footer footer-common">-->
+                                        <!--<button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed disabled">{:__('OK')}</button>-->
+                                        <!--<button type="reset" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed">{:__('Reset')}</button>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                             </form>
                         </div>
                         <div class="layui-tab-item" id="tab2">
@@ -102,15 +109,21 @@
                                             </td>
                                         </tr>
                                         {/if}
-
+                                        <tr>
+                                            <td class="tdleft"></td>
+                                            <td class="tdright" colspan="2">
+                                                <button class="yty-btn layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
+                                                <button type="reset" class="layui-btn yty-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>
+                                            </td>
+                                        </tr>
                                     </tbody>
                                 </table>
-                                <div class="layui-form-item">
-                                    <div class="footer footer-common">
-                                        <button class="layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>
-                                        <button type="reset" class="layui-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>
-                                    </div>
-                                </div>
+                                <!--<div class="layui-form-item">-->
+                                    <!--<div class="footer footer-common">-->
+                                        <!--<button class="layui-btn layui-btn-normal layui-btn-sm" lay-submit="" lay-filter="component-form-element">{:__('Save')}</button>-->
+                                        <!--<button type="reset" class="layui-btn layui-btn-normal layui-btn-sm">{:__('Reset')}</button>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                             </form>
                         </div>
                     </div>
